fixed typo in settings.py file EMAIL_BACKEND

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,10 @@
 <img class="bookcover" src="{% static 'images/djangoforprofessionals.jpg' %}">
 {% if user.is_authenticated %}
 Hi {{ user.email }}
-<a href="{% url 'logout' %}">Log out</a>
+<a href="{% url 'account_logout' %}">Log out</a>
 {% else %}
 <p> You are not logged in </p>
-<a href="{% url 'login' %}" > Log in</a>
-<a href="{% url 'signup' %}">Sign up</a>
+<a href="{% url 'account_login' %}" > Log in</a>
+<a href="{% url 'account_signup' %}">Sign up</a>
 {% endif %}
 {% endblock content %}
