--- a/templates/_base.html
+++ b/templates/_base.html
@@ -21,10 +21,10 @@
 				<nav class="my-2 my-md-0 mr-md-3">
 					<a href="{% url 'about' %}" class="p-2 text-dark">About</a>
 					{% if user.is_authenticated %} 
-					<a href="{% url 'logout' %}" class="p-2 text-dark"> Log Out</a>
+					<a href="{% url 'account_logout' %}" class="p-2 text-dark"> Log Out</a>
 					{% else %}
-					<a class="p-2 text-dark" href="{% url 'login' %}"> Log In</a>
-					<a class="btn btn-outline-primary" href="{% url 'signup' %}"> Sign Up</a>
+					<a class="p-2 text-dark" href="{% url 'account_login' %}"> Log In</a>
+					<a class="btn btn-outline-primary" href="{% url 'account_signup' %}"> Sign Up</a>
 					{% endif %}
 				</nav>
 			</div>
