added forgot password, email confirmation

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,6 +8,7 @@
 <form method="POST">
 	{% csrf_token %}
 	{{ form|crispy }}
+	<a href="{% url 'account_reset_password' %}">Forgot Password</a> <br>
 	<button type="submit" class="btn btn-success"> Log In</button>
 </form>
 
