added email service

--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -6,4 +6,5 @@
 {% block content %}
     <h1>{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
+    <p><a href="{% url 'account_login' %}" > click here</a>  to login </p>
 {% endblock %}
