--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,6 +19,7 @@
 			<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
 				<a href="{% url 'home' %}" class="navbar-brand my-0 mr-md-auto font-weight-normal">Bookstore</a>
 				<nav class="my-2 my-md-0 mr-md-3">
+					<a href="{% url 'book_list' %}" class="p-2 text-dark">Books</a>
 					<a href="{% url 'about' %}" class="p-2 text-dark">About</a>
 					{% if user.is_authenticated %} 
 					<a href="{% url 'account_logout' %}" class="p-2 text-dark"> Log Out</a>
